--- a/main.html
+++ b/main.html
@@ -7,6 +7,38 @@
 </head>
 
 <body>
+	<table border='1'>
+		<tr>
+			<th>Roll numbers</th>
+			<th>Student Nmae</th>	
+		</tr>
+		<tr>
+			<td>1</td>
+			<td>Raju</td>
+		</tr>
+		<tr>
+			<td>2</td>
+			<td>Sudha</td>
+		</tr>
+		<tr>
+			<td>3</td>
+			<td>Sroj</td>
+		</tr>
+	</table>
+	List of medias
+	<ol>
+		<li>
+	<img src="https://picsum.photos/id/123/200/300" alt="image">
+		</li>
+		<li>
+	<video controls>
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" alt="video">
+	</video> 
+		</li>
+		<li>
+	<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls>
+	</audio>
+		</li>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
