--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
 	<img src="https://picsum.photos/id/123/200/300" alt="image">
 		</li>
 		<li>
-	<video controls>
+	<video controls width="300px" >
 		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" alt="video">
 	</video> 
 		</li>
