--- a/main.html
+++ b/main.html
@@ -8,10 +8,13 @@
 
 <body>
 	<table border='1'>
+		<thead>
 		<tr>
 			<th>Roll numbers</th>
 			<th>Student Nmae</th>	
 		</tr>
+		</thead>
+		<tbody>
 		<tr>
 			<td>1</td>
 			<td>Raju</td>
@@ -24,6 +27,7 @@
 			<td>3</td>
 			<td>Sroj</td>
 		</tr>
+		</tbody>
 	</table>
 	List of medias
 	<ol>
